--- a/Views/Home/SearchByName.cshtml
+++ b/Views/Home/SearchByName.cshtml
@@ -2,7 +2,9 @@
 
 <h2>@Model.name</h2>
 
-<h3>@Model.height</h3>
-<h4>@Model.weight</h4>
-<h4>@Model.id</h4>
-<h4>@Model.id</h4>
+<ul>
+    <li>Id: @Model.id</li>
+    <li>Height: @Model.height </li>
+    <li>Weight: @Model.weight</li>
+    <li>Order: @Model.order</li>
+</ul>
