Can search by move. Some moves break conversion, need to tweak MoveRoot object

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,3 +13,10 @@
     <input type="text" name="pokemon"/>
     <input type="submit"/>
 </form>
+<br />
+
+<form asp-action="SearchByMove" asp-controller="Home">
+    <label for="move">Search by move</label>
+    <input type="text" name="move" />
+    <input type="submit" />
+</form>
