--- a/Views/Home/SearchByName.cshtml
+++ b/Views/Home/SearchByName.cshtml
@@ -4,7 +4,7 @@
 
 <ul>
     <li>Id: @Model.id</li>
-    <li>Height: @Model.height </li>
-    <li>Weight: @Model.weight</li>
+    <li>Height: @((double)Model.height/10) meters</li>
+    <li>Weight: @((double)Model.weight/10) kg</li>
     <li>Order: @Model.order</li>
 </ul>
