--- a/Views/Favorites/Index.cshtml
+++ b/Views/Favorites/Index.cshtml
@@ -1,9 +1,17 @@
-﻿@model List<Pokemon> 
+﻿@model List<Pokemon>
 
-<h2>Viewing your favorite Pokemon:</h2>
-@foreach(Pokemon p in Model)
+@if (Model.Count == 0)
 {
-    <h3>Name: @p.Name</h3>
-    <h3>URL: @p.Url</h3>
-    <h3>UserId: @p.UserId</h3>
+    <p>You don't currently have any Pokemon added to your favorites.</p>
+}
+else
+{
+    <h2>Viewing your favorite Pokemon:</h2>
+    @foreach (Pokemon p in Model)
+    {
+        <h3>Name: @p.Name</h3>
+        <h3>URL: @p.Url</h3>
+        <h3>UserId: @p.UserId</h3>
+        <a asp-action="Delete" asp-controller="Favorites" asp-route-id="@p.Id"><button>Remove Favorite</button></a>
+    }
 }
