Cleaned up merging from 4 sources

--- a/Views/Favorites/Delete.cshtml
+++ b/Views/Favorites/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Pokemon
+﻿@model FavPokemon
 
 <form asp-action="Delete" asp-controller="Favorites" method="post">
     <p>
@@ -10,6 +10,5 @@
             <button>
                 Remove
             </button>
-        </a>
     </p>
 </form>
