--- a/Views/Home/SearchByName.cshtml
+++ b/Views/Home/SearchByName.cshtml
@@ -1,10 +1,24 @@
 ﻿@model PokemonRoot
 
 <h2>@Model.name</h2>
-
+<br />
+@*<img src=@Model.sprites.other.officialartwork.front_default />*@
+<br />
 <ul>
     <li>Id: @Model.id</li>
     <li>Height: @((double)Model.height/10) meters</li>
     <li>Weight: @((double)Model.weight/10) kg</li>
     <li>Order: @Model.order</li>
 </ul>
+<br />
+<img src=@Model.sprites.front_default />
+<img src=@Model.sprites.back_default />
+<img src=@Model.sprites.front_shiny />
+<img src=@Model.sprites.back_shiny />
+<img src=@Model.sprites.front_female />
+<img src=@Model.sprites.back_female />
+<img src=@Model.sprites.front_shiny_female />
+<img src=@Model.sprites.back_shiny_female />
+<br />
+<a asp-action="Add" asp-controller="Favorites">Add this Pokemon to your Deck! </a>
+
