Added dream_world photo (looks very similar to official artwork)

--- a/Views/Home/SearchByName.cshtml
+++ b/Views/Home/SearchByName.cshtml
@@ -2,7 +2,7 @@
 
 <h2>@Model.name</h2>
 <br />
-@*<img src=@Model.sprites.other.officialartwork.front_default />*@
+<img src=@Model.sprites.other.dream_world.front_default />
 <br />
 <ul>
     <li>Id: @Model.id</li>
