Added SearchByHabitat functionality

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -61,3 +61,9 @@
     </select>
     <input type="submit" />
 </form>
+
+<form asp-action="SearchByHabitat" asp-controller="Home">
+    <label for="habitat">Search by habitat</label>
+    <input type="text" name="habitat" />
+    <input type="submit" />
+</form>
