--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -64,6 +64,16 @@
 
 <form asp-action="SearchByHabitat" asp-controller="Home">
     <label for="habitat">Search by habitat</label>
-    <input type="text" name="habitat" />
+    <select name="habitat" id="habitat">
+        <option value="cave">Cave</option>
+        <option value="forest">Forest</option>
+        <option value="grassland">Grassland</option>
+        <option value="mountain">Mountain</option>
+        <option value="rare">Rare</option>
+        <option value="rough-terrain">Rough Terrain</option>
+        <option value="sea">Sea</option>
+        <option value="urban">Urban</option>
+        <option value="waters-edge">Water's Edge</option>
+    </select>
     <input type="submit" />
 </form>
