--- a/Views/Home/SearchByName.cshtml
+++ b/Views/Home/SearchByName.cshtml
@@ -8,3 +8,6 @@
     <li>Weight: @((double)Model.weight/10) kg</li>
     <li>Order: @Model.order</li>
 </ul>
+
+<a asp-action="Add" asp-controller="Favorites" asp-route-pokemon="@Model.name">Add this Pokemon to your Deck! </a>
+
