--- a/Views/Home/SearchByName.cshtml
+++ b/Views/Home/SearchByName.cshtml
@@ -20,5 +20,25 @@
 <img src=@Model.sprites.front_shiny_female />
 <img src=@Model.sprites.back_shiny_female />
 <br />
+
+<label for="base-moves">Moves learned at level 1:</label>
+<ul id="base-moves">
+    @foreach (Move m in Model.moves)
+    {
+        bool baseMove = false;
+        foreach (Version_Group_Details v in m.version_group_details)
+        {
+            if (v.level_learned_at == 1)
+            {
+                baseMove = true;
+            }
+        }
+
+        if (baseMove)
+        {
+            <li>@m.move.name</li>
+        }
+    }
+</ul>
 <a asp-action="Add" asp-controller="Favorites">Add this Pokemon to your Deck! </a>
 
