--- a/Views/Favorites/Index.cshtml
+++ b/Views/Favorites/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<FavPokemon>
 
+<h3 style="color: red"><strong>@TempData.Peek("error")</strong></h3>
+
 @if (Model.Count == 0)
 {
     <p>You don't currently have any Pokemon added to your favorites.</p>
@@ -13,7 +15,16 @@ else
         <p>Name: @p.Name</p>
         <p>Type(s): @p.Type1@p.Type2</p>
         <br />
-        <a asp-action="Delete" asp-controller="Favorites" asp-route-id="@p.Id"><button>Remove Favorite</button></a>
+        <a asp-action="Delete" asp-controller="Favorites" asp-route-id="@p.Id">
+            <button>
+                Remove Favorite
+            </button>
+        </a>
+        <a asp-action="SearchByName" asp-controller="Home" asp-route-pokemon="@p.Name">
+            <button>
+                See More!
+            </button>
+        </a>
         <hr />
     }
 }
