--- a/Views/Favorites/Index.cshtml
+++ b/Views/Favorites/Index.cshtml
@@ -1,19 +1,20 @@
 ﻿@model List<FavPokemon>
-
-@if (Model.Count == 0)
-{
-    <p>You don't currently have any Pokemon added to your favorites.</p>
-}
-else
-{
-    <h2>Viewing your favorite Pokemon:</h2>
-    @foreach (FavPokemon p in Model)
+<body>
+    @if (Model.Count == 0)
     {
-        <img src=@p.Image />
-        <p>Name: @p.Name</p>
-        <p>Type(s): @p.Type1@p.Type2</p>
-        <br />
-        <a asp-action="Delete" asp-controller="Favorites" asp-route-id="@p.Id"><button>Remove Favorite</button></a>
-        <hr />
+        <p>You don't currently have any Pokemon added to your favorites.</p>
     }
-}
+    else
+    {
+        <h2>Viewing your favorite Pokemon:</h2>
+        @foreach (FavPokemon p in Model)
+        {
+            <img src=@p.Image />
+            <p>Name: @p.Name</p>
+            <p>Type(s): @p.Type1@p.Type2</p>
+            <br />
+            <a asp-action="Delete" asp-controller="Favorites" asp-route-id="@p.Id"><button>Remove Favorite</button></a>
+            <hr />
+        }
+    }
+</body>
