--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,8 +20,29 @@
   
     <div class="city">
         <form align="center" asp-action="SearchByType" asp-controller="Home">
-            <label>Search for Pokemon by Type!</label>
-            <input type="text" name="type" />
+            <label for="type">Search for Pokemon by Type!</label>
+            <select name="type" id="type">
+                <option value="normal">Normal</option>
+                <option value="fighting">Fighting</option>
+                <option value="flying">Flying</option>
+                <option value="poison">Poison</option>
+                <option value="ground">Ground</option>
+                <option value="rock">Rock</option>
+                <option value="bug">Bug</option>
+                <option value="ghost">Ghost</option>
+                <option value="steel">Steel</option>
+                <option value="fire">Fire</option>
+                <option value="water">Water</option>
+                <option value="grass">Grass</option>
+                <option value="electric">Electric</option>
+                <option value="psychic">Psychic</option>
+                <option value="ice">Ice</option>
+                <option value="dragon">Dragon</option>
+                <option value="dark">Dark</option>
+                <option value="fairy">Fairy</option>
+                <option value="unknown">Unknown</option>
+                <option value="shadow">Shadow</option>
+            </select>
             <input type="submit" />
         </form>
         <br />
