--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -15,8 +15,30 @@ a.navbar-brand {
 }
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+  color: burlywood;
 }
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50;
+}
+
+    .button:hover {
+        background-color: #4CAF50;
+        color: white;
+    }
 
 .btn-primary {
     color: #fff;
