Added text and input normalization helper class

--- a/Views/Favorites/Delete.cshtml
+++ b/Views/Favorites/Delete.cshtml
@@ -1,8 +1,9 @@
 ﻿@model FavPokemon
+@using PokemonAPIProject.Helpers;
 
 <form asp-action="Delete" asp-controller="Favorites" method="post">
     <p>
-    <h2>Are you sure you want to remove @Model.Name from your favorites?</h2>
+    <h2>Are you sure you want to remove @TextCleaner.Clean(Model.Name) from your favorites?</h2>
             @Html.HiddenFor(x => x.Id)
             @Html.HiddenFor(x => x.Name)
             @Html.HiddenFor(x => x.Url)
