--- a/Views/Favorites/Index.cshtml
+++ b/Views/Favorites/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<FavPokemon>
+@using PokemonAPIProject.Helpers; 
 
 <h3 style="color: red"><strong>@TempData.Peek("error")</strong></h3>
 
@@ -12,8 +13,8 @@ else
     @foreach (FavPokemon p in Model)
     {
         <img src=@p.Image />
-        <p>Name: @p.Name</p>
-        <p>Type(s): @p.Type1@p.Type2</p>
+        <p>Name: @TextCleaner.Clean(p.Name)</p>
+        <p>Type(s): @TextCleaner.Clean(p.Type1)@TextCleaner.Clean(p.Type2)</p>
         <br />
         <a asp-action="Delete" asp-controller="Favorites" asp-route-id="@p.Id">
             <button>
