--- a/Views/Favorites/Index.cshtml
+++ b/Views/Favorites/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<FavPokemon>
 
-<h3 style="color: red"><strong>@TempData.Peek("error")</strong></h3>
+<h3 style="color: red"><strong>@TempData.Peek("faverror")</strong></h3>
 
 @if (Model.Count == 0)
 {
