--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,7 +19,7 @@ a {
 }
 
 .button {
-    background-color: #4CAF50; /* Green */
+    background-color:cornflowerblue;
     border: none;
     color: white;
     padding: 16px 32px;
@@ -30,13 +30,13 @@ a {
     margin: 4px 2px;
     transition-duration: 0.4s;
     cursor: pointer;
-    background-color: white;
+    background-color: lightblue;
     color: black;
-    border: 2px solid #4CAF50;
+    border: 4px solid black;
 }
 
     .button:hover {
-        background-color: #4CAF50;
+        background-color: brown;
         color: white;
     }
 
