--- a/Views/Home/SearchByName.cshtml
+++ b/Views/Home/SearchByName.cshtml
@@ -72,7 +72,7 @@
             for (int i = 0; i < Model.abilities.Length; i++)
             {
                 <tr>
-                    <td>@Model.abilities[i].ability.name</td>
+                    <td>@TextCleaner.Clean(Model.abilities[i].ability.name)</td>
                 </tr>
             }
         }
